--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-navigation/native-stack": "^6.11.0",
     "buffer": "^6.0.3",
     "isomorphic-git": "^1.37.1",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^3.35.0",
+    "react-native-tcp-socket": "^6.4.1",
     "react-native-vector-icons": "^10.3.0",
     "zustand": "^5.0.11"
   },
